2015-09-02  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (js-aggregate-chart, js-tasks-chart):
	Use correct count of node-set parameters for placing commas.
	(js-scan-management-top-visualization): Add empty_text to gen_params
	of the "'High' results per host" bubble charts.

	* src/html/classic/js/gsa_bubble_chart.js: Filter out records with
	zero size_value for bubble creation. Add a dummy bubble if there are no
	non-zero records.

2015-09-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Add deleting of host identifiers.

	* src/gsad.c (init_validator, exec_omp_post): Add delete_asset.

	* src/gsad_omp.c (delete_resource): Add next_id handling in case the ID
	for the next page would have the same name.
	(delete_asset_omp): New function.

	* src/gsad_omp.h: Add header accordingly.

	* src/html/classic/omp.xsl (delete_asset_response): New template.
	(asset [host-details]): Add delete icon.
	(get_asset): Match delete response.

2015-09-02  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/gsad.xsl (html-head): Consolidate conditional
	loading of scripts and stylesheets and load gsa-style.css second to
	allow overwriting of styles from select2.min.css.

	* src/html/classic/css/gsa-style.css: Add styles to make size of
	Select2 dropdown boxes more like the old basic ones.

2015-09-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/classic/css/gsa-style.css: Increase envelope width
	from 1200 to 2000. The GUI looks OK for upto that size and then
	gets a bit harder to read (eg. the expanded results.

2015-09-01  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-create-target-form)
	(html-edit-target-form): Only show "pass" type credentials in SMB and
	ESXi dropdowns.

2015-08-31  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (export_many): XML escape the filter.

2015-08-31  Timo Pollmeier <timo.pollmeier@greenbone.net>
